--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ FastMPOContractions = "f6e391d2-8ffa-4d7a-98cd-7e70024481ca"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LocalCoverage = "5f6e1e16-694c-5876-87ef-16b5274f298e"
+Quantics = "87f76fb3-a40a-40c9-a63c-29fcfe7b7547"
 
 [compat]
 Coverage = "1"
@@ -18,6 +19,7 @@ EllipsisNotation = "1"
 FastMPOContractions = "0.2.2"
 ITensors = "0.6"
 LocalCoverage = "0.8"
+Quantics = "0.3.8"
 julia = "1.6"
 
 [extras]
