CompatHelper: bump compat for ITensors to 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ Coverage = "1"
 CoverageTools = "1"
 EllipsisNotation = "1"
 FastMPOContractions = "0.2.5"
-ITensors = "0.6"
+ITensors = "0.6, 0.7"
 LocalCoverage = "0.8"
 OrderedCollections = "1.6.3"
 Quantics = "0.3.8"
